# Portfolio

./: Cargo.toml  README.md  Trunk.toml  index.html
src/: app.rs  main.rs
src/assets/: style.css
src/components/: contact.rs  footer.rs  header.rs  mod.rs
src/pages/: mod.rs  notfound.rs
src/pages/fallback/: fallback_page.rs  mod.rs
src/pages/home/: contact.rs  hero.rs  home_page.rs  mod.rs  projects.rs  technologies.rs  testimonial.rs
src/pages/projects/: mod.rs  projects.rs
