[package]
name = "portfolio"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.8.8", features = ["csr"] }
leptos_router = "0.8.6"
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.100"
leptos_meta = "0.8.5"
js-sys = "0.3.77"
stylers = "1.0.0-alpha"
getrandom = { version = "0.2.16", features = ["js"] }

[dependencies.web-sys]
version = "0.3.77"
features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Location",
    "ScrollBehavior",
    "ScrollIntoViewOptions"
]

[build-dependencies]
stylers = "1.0.0-alpha"
